feat(be): implement v0.3.2
