# backend/api/serializers/database.go
@@ -123,3 +123,16 @@ func (v *DatabaseUpdateCollectionBodyValidate) Validate() error {
 	}
 	return nil
 }
+
+type DatabaseDeleteCollectionBodyValidate struct {
+	Collection string             `json:"collection" validate:"required"`
+	DatabaseId primitive.ObjectID `json:"database_id" validate:"required"`
+}
+
+func (v *DatabaseDeleteCollectionBodyValidate) Validate() error {
+	validateEngine := validator.GetValidateEngine()
+	if err := validateEngine.Struct(v); err != nil {
+		return response.NewError(fiber.StatusBadRequest, response.ErrorOptions{Data: validator.ParseValidateError(err)})
+	}
+	return nil
+}
